# pytcldriver

./: LICENSE.txt  README.md  comm.tcl  communicator.py  dict.tcl  interpreter.py  pyproject.toml  tclinterop.py  utils.py  xilinx.py
pytcldriver/: __init__.py  communicator.py  utils.py  wrappers.py  xilinx.py
pytcldriver/tcl/: __init__.py  communicator.tcl  main.tcl  main_file.tcl  main_shell.tcl  mt19937.tcl
