[build-system]
requires = ["setuptools >= 64.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pytcldriver"
dynamic = ["version"]
dependencies = [
  "importlib-resources",
  "pycryptodome",
  "tk",
]

authors = [
  {name = "Andrea Bellandi", email = "andrea.bellandi@desy.de"},
]

maintainers = [
  {name = "Andrea Bellandi", email = "andrea.bellandi@desy.de"},
]

description = "This library drives Tcl interpreters exposing their values, methods and namespaces in a pythonic way"
readme = "README.md"
license = {file = "LICENSE.txt"}

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
pytcldriver = ["*.tcl", "*.pcx"]

[project.urls]
# Homepage = ""
# Documentation = ""
# Repository = ""
# Issues = ""
# Changelog = ""
